force-app/main/default/objects/Booking__c/fields/Aadhaar_Number1__c.field-meta.xml
<CustomField>
    <fullName>Aadhaar_Number1__c</fullName>
    <label>Aadhaar Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>