force-app/main/default/objects/Booking__c/fields/Aadhaar_Number__c.field-meta.xml
<CustomField>
    <fullName>Aadhaar_Number__c</fullName>
    <label>Primary Applicant Aadhaar Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>