force-app/main/default/objects/Booking__c/fields/Address_for_Registration__c.field-meta.xml
<CustomField>
    <fullName>Address_for_Registration__c</fullName>
    <label>Address for Registration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Same as Correspondence Address</fullName>
            </value>
            <value>
                <fullName>Same as Permanent Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>