force-app/main/default/objects/Booking__c/fields/Address_for_Registration_Project__c.field-meta.xml
<CustomField>
    <fullName>Address_for_Registration_Project__c</fullName>
    <formula>Project1__r.Address_for_Registration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address for Registration (Project)</label>
    <type>Text</type>
</CustomField>