force-app/main/default/objects/Booking__c/fields/Age2__c.field-meta.xml
<CustomField>
    <fullName>Age2__c</fullName>
    <formula>IF( ISBLANK(Date_of_birth_Applicant2__c) , 0, IF(
MONTH(TODAY()) &gt; MONTH(Date_of_birth_Applicant2__c) ||
(MONTH(TODAY()) = MONTH(Date_of_birth_Applicant2__c) &amp;&amp; DAY(TODAY()) &gt;= DAY(Date_of_birth_Applicant2__c)),
YEAR(TODAY()) - YEAR(Date_of_birth_Applicant2__c),
YEAR(TODAY()) - YEAR(Date_of_birth_Applicant2__c) - 1
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>