force-app/main/default/objects/Booking__c/fields/Agreed_Apt_Price_INR__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Apt_Price_INR__c</fullName>
    <label>Agreed Apt Price(INR)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>