force-app/main/default/objects/Booking__c/fields/Agreement_Amount_Check__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Amount_Check__c</fullName>
    <formula>Total_received_Amount__c&gt;=Agreement_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Amount Check</label>
    <type>Checkbox</type>
</CustomField>