force-app/main/default/objects/Booking__c/fields/Agreement_Amout_Request_on__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Amout_Request_on__c</fullName>
    <label>Agreement Amout Request on</label>
    <type>Date</type>
</CustomField>