force-app/main/default/objects/Booking__c/fields/Agreement_Cost__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Cost__c</fullName>
    <formula>Total__c * Agreement_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>