force-app/main/default/objects/Booking__c/fields/Agreement_User__c.field-meta.xml
<CustomField>
    <fullName>Agreement_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agreement User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BookingsNXSF</relationshipName>
    <type>Lookup</type>
</CustomField>