force-app/main/default/objects/Booking__c/fields/Agreement_value__c.field-meta.xml
<CustomField>
    <fullName>Agreement_value__c</fullName>
    <label>Agreement value</label>
    <type>TextArea</type>
</CustomField>