force-app/main/default/objects/Booking__c/fields/All_KYC_are_correct__c.field-meta.xml
<CustomField>
    <fullName>All_KYC_are_correct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All KYC are correct</label>
    <type>Checkbox</type>
</CustomField>