force-app/main/default/objects/Booking__c/fields/Alternate_Email1__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email1__c</fullName>
    <label>Alternate Email</label>
    <type>Email</type>
</CustomField>