force-app/main/default/objects/Booking__c/fields/AM__c.field-meta.xml
<CustomField>
    <fullName>AM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>