force-app/main/default/objects/Booking__c/fields/Amount_in_words__c.field-meta.xml
<CustomField>
    <fullName>Amount_in_words__c</fullName>
    <label>Amount in words</label>
    <length>80</length>
    <type>Text</type>
</CustomField>