force-app/main/default/objects/Booking__c/fields/Anniverssary_Date3__c.field-meta.xml
<CustomField>
    <fullName>Anniverssary_Date3__c</fullName>
    <label>Anniverssary Date</label>
    <type>Date</type>
</CustomField>