force-app/main/default/objects/Booking__c/fields/Annual_income__c.field-meta.xml
<CustomField>
    <fullName>Annual_income__c</fullName>
    <label>Annual income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BELOW 10 LAKHS</fullName>
            </value>
            <value>
                <fullName>10 - 20 LAKHS</fullName>
            </value>
            <value>
                <fullName>20 -30 LAKHS</fullName>
            </value>
            <value>
                <fullName>30 - 50 LAKHS</fullName>
            </value>
            <value>
                <fullName>50 LAKHS - 1 CR</fullName>
            </value>
            <value>
                <fullName>1 CR  ABOVE</fullName>
                <label>1 CR &amp; ABOVE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>