force-app/main/default/objects/Booking__c/fields/Applied_to_any_Bank__c.field-meta.xml
<CustomField>
    <fullName>Applied_to_any_Bank__c</fullName>
    <label>Applied to any Bank for Home Loan?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>