force-app/main/default/objects/Booking__c/fields/Approved_By_Nmae__c.field-meta.xml
<CustomField>
    <fullName>Approved_By_Nmae__c</fullName>
    <label>Approved By-Nmae</label>
    <length>20</length>
    <type>Text</type>
</CustomField>