force-app/main/default/objects/Booking__c/fields/Assigned_by__c.field-meta.xml
<CustomField>
    <fullName>Assigned_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bookings6</relationshipName>
    <type>Lookup</type>
</CustomField>