force-app/main/default/objects/Booking__c/fields/Assignment_Process_Started__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Process_Started__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assignment Process Started</label>
    <type>Checkbox</type>
</CustomField>