force-app/main/default/objects/Booking__c/fields/Attended_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Attended_By_Name__c</fullName>
    <label>Attended By-Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>