force-app/main/default/objects/Booking__c/fields/Balance_Booking_Amout__c.field-meta.xml
<CustomField>
    <fullName>Balance_Booking_Amout__c</fullName>
    <formula>Actual_Booking_Amout__c  -  Booking_Amount1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Booking Amout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>