force-app/main/default/objects/Booking__c/fields/Balcony_Area__c.field-meta.xml
<CustomField>
    <fullName>Balcony_Area__c</fullName>
    <formula>Plot__r.Balcony_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balcony Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>