force-app/main/default/objects/Booking__c/fields/Bank_CO_Ordinator__c.field-meta.xml
<CustomField>
    <fullName>Bank_CO_Ordinator__c</fullName>
    <label>Bank CO-Ordinator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>