force-app/main/default/objects/Booking__c/fields/Bank_Employee_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Employee_Contact_Number__c</fullName>
    <label>Bank Employee Contact Number</label>
    <type>Phone</type>
</CustomField>