force-app/main/default/objects/Booking__c/fields/Bank_NOC_Collected__c.field-meta.xml
<CustomField>
    <fullName>Bank_NOC_Collected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank NOC Collected</label>
    <type>Checkbox</type>
</CustomField>