force-app/main/default/objects/Booking__c/fields/Banker_s_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Banker_s_Contact_Number__c</fullName>
    <label>Banker&apos;s Contact Number</label>
    <type>Phone</type>
</CustomField>