force-app/main/default/objects/Booking__c/fields/Banker_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Banker_s_Email__c</fullName>
    <label>Banker&apos;s Email</label>
    <type>Email</type>
</CustomField>