force-app/main/default/objects/Booking__c/fields/Basic_Priceswap__c.field-meta.xml
<CustomField>
    <fullName>Basic_Priceswap__c</fullName>
    <label>Basic Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>