force-app/main/default/objects/Booking__c/fields/BESCOM_Deposit_Rs__c.field-meta.xml
<CustomField>
    <fullName>BESCOM_Deposit_Rs__c</fullName>
    <label>BESCOM Deposit Rs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>