force-app/main/default/objects/Booking__c/fields/Booking_Cancelled_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_Cancelled_Date__c</fullName>
    <label>Booking Cancelled Date</label>
    <type>DateTime</type>
</CustomField>