force-app/main/default/objects/Booking__c/fields/Booking_Link_Filled__c.field-meta.xml
<CustomField>
    <fullName>Booking_Link_Filled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booking Link Filled</label>
    <type>Checkbox</type>
</CustomField>