force-app/main/default/objects/Booking__c/fields/Booking_Stage_Completed__c.field-meta.xml
<CustomField>
    <fullName>Booking_Stage_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booking Stage Completed</label>
    <type>Checkbox</type>
</CustomField>