force-app/main/default/objects/Booking__c/fields/Booking_Stage_Document_Created__c.field-meta.xml
<CustomField>
    <fullName>Booking_Stage_Document_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booking Stage Document Created</label>
    <type>Checkbox</type>
</CustomField>