force-app/main/default/objects/Booking__c/fields/Booking_Stage_Uploads_Successful__c.field-meta.xml
<CustomField>
    <fullName>Booking_Stage_Uploads_Successful__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booking Stage Uploads Successful</label>
    <type>Checkbox</type>
</CustomField>