force-app/main/default/objects/Booking__c/fields/Builder_Land_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Builder_Land_Owner_Name__c</fullName>
    <formula>TEXT(Plot__r.Share__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Builder/Land Owner Name</label>
    <type>Text</type>
</CustomField>