force-app/main/default/objects/Booking__c/fields/Cancellation_Type__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Type__c</fullName>
    <formula>IF(
    OR(
        ISPICKVAL(Stage__c, &quot;Reservation&quot;),
        ISPICKVAL(Stage__c, &quot;Agreement&quot;)
    ),
    &quot;Before Agreement Cancellation&quot;,
    IF(
        ISPICKVAL(Stage__c, &quot;Cancellation&quot;),
        &quot;&quot;,
        &quot;After Agreement Cancellation&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancellation Type</label>
    <type>Text</type>
</CustomField>