force-app/main/default/objects/Booking__c/fields/Cancellation_User__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cancellation User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bookings3</relationshipName>
    <type>Lookup</type>
</CustomField>