force-app/main/default/objects/Booking__c/fields/Citizen_of_Status_NRI_POI1__c.field-meta.xml
<CustomField>
    <fullName>Citizen_of_Status_NRI_POI1__c</fullName>
    <label>Citizen of/Status(NRI/POI)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>