force-app/main/default/objects/Booking__c/fields/City3__c.field-meta.xml
<CustomField>
    <fullName>City3__c</fullName>
    <label>City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>