force-app/main/default/objects/Booking__c/fields/Club_Houseswap__c.field-meta.xml
<CustomField>
    <fullName>Club_Houseswap__c</fullName>
    <label>Club house</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>