force-app/main/default/objects/Booking__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <label>Commission %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>