force-app/main/default/objects/Booking__c/fields/Common_Area__c.field-meta.xml
<CustomField>
    <fullName>Common_Area__c</fullName>
    <label>Common Area</label>
    <length>20</length>
    <type>Text</type>
</CustomField>