force-app/main/default/objects/Booking__c/fields/Communication_address1__c.field-meta.xml
<CustomField>
    <fullName>Communication_address1__c</fullName>
    <label>Communication address</label>
    <type>TextArea</type>
</CustomField>