force-app/main/default/objects/Booking__c/fields/Confirmed_Funding_Type__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Funding_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed Funding Type?</label>
    <type>Checkbox</type>
</CustomField>