force-app/main/default/objects/Booking__c/fields/Corpus_Fundswap__c.field-meta.xml
<CustomField>
    <fullName>Corpus_Fundswap__c</fullName>
    <label>Corpus Fund</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>