force-app/main/default/objects/Booking__c/fields/Cost_Break_up_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Cost_Break_up_Sheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cost Break-up Sheet</label>
    <type>Checkbox</type>
</CustomField>