force-app/main/default/objects/Booking__c/fields/Cost_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Cost_Sheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost Sheet</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>