force-app/main/default/objects/Booking__c/fields/Createddate__c.field-meta.xml
<CustomField>
    <fullName>Createddate__c</fullName>
    <label>Createddate</label>
    <type>Date</type>
</CustomField>