force-app/main/default/objects/Booking__c/fields/CRM_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>CRM_Manager_Email__c</fullName>
    <formula>CRM_Manager__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRM Manager Email</label>
    <type>Text</type>
</CustomField>