force-app/main/default/objects/Booking__c/fields/Customer_Is_going_for_Loan__c.field-meta.xml
<CustomField>
    <fullName>Customer_Is_going_for_Loan__c</fullName>
    <label>Customer Is going for Loan ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>