force-app/main/default/objects/Booking__c/fields/Date7__c.field-meta.xml
<CustomField>
    <fullName>Date7__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>