force-app/main/default/objects/Booking__c/fields/Date_of_balance_own_contribution_to_be_p__c.field-meta.xml
<CustomField>
    <fullName>Date_of_balance_own_contribution_to_be_p__c</fullName>
    <label>Date of balance own contribution paid on</label>
    <type>Date</type>
</CustomField>