force-app/main/default/objects/Booking__c/fields/Date_of_birth_Applicant2__c.field-meta.xml
<CustomField>
    <fullName>Date_of_birth_Applicant2__c</fullName>
    <label>Date of birth</label>
    <type>Date</type>
</CustomField>