force-app/main/default/objects/Booking__c/fields/Date_of_NDC__c.field-meta.xml
<CustomField>
    <fullName>Date_of_NDC__c</fullName>
    <label>Date of NDC</label>
    <type>Date</type>
</CustomField>