force-app/main/default/objects/Booking__c/fields/Date_Of_Offer_Letter__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Offer_Letter__c</fullName>
    <label>Date Of Offer Letter</label>
    <type>Date</type>
</CustomField>