force-app/main/default/objects/Booking__c/fields/Demand_Collection_Users__c.field-meta.xml
<CustomField>
    <fullName>Demand_Collection_Users__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demand &amp; Collection User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bookings8</relationshipName>
    <type>Lookup</type>
</CustomField>