force-app/main/default/objects/Booking__c/fields/Demands__c.field-meta.xml
<CustomField>
    <fullName>Demands__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demands</label>
    <type>Checkbox</type>
</CustomField>