force-app/main/default/objects/Booking__c/fields/Demands_Expected_Date__c.field-meta.xml
<CustomField>
    <fullName>Demands_Expected_Date__c</fullName>
    <label>Demands Expected Date</label>
    <type>Date</type>
</CustomField>