force-app/main/default/objects/Booking__c/fields/demo__c.field-meta.xml
<CustomField>
    <fullName>demo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>demo</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>