force-app/main/default/objects/Booking__c/fields/Designation1__c.field-meta.xml
<CustomField>
    <fullName>Designation1__c</fullName>
    <label>Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>